seaqt/QtWidgets/gen_qdatetimeedit.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
typedef struct VirtualQTimeEdit VirtualQTimeEdit;
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
QMetaObject* QTimeEdit_virtualbase_metaObject(const VirtualQTimeEdit* self);
void* QTimeEdit_virtualbase_metacast(VirtualQTimeEdit* self, const char* param1);
int QTimeEdit_virtualbase_metacall(VirtualQTimeEdit* self, int param1, int param2, void** param3);
QSize* QTimeEdit_virtualbase_sizeHint(const VirtualQTimeEdit* self);
void QTimeEdit_virtualbase_clear(VirtualQTimeEdit* self);
void QTimeEdit_virtualbase_stepBy(VirtualQTimeEdit* self, int steps);
bool QTimeEdit_virtualbase_event(VirtualQTimeEdit* self, QEvent* event);
void QTimeEdit_virtualbase_keyPressEvent(VirtualQTimeEdit* self, QKeyEvent* event);
void QTimeEdit_virtualbase_wheelEvent(VirtualQTimeEdit* self, QWheelEvent* event);
void QTimeEdit_virtualbase_focusInEvent(VirtualQTimeEdit* self, QFocusEvent* event);
bool QTimeEdit_virtualbase_focusNextPrevChild(VirtualQTimeEdit* self, bool next);
int QTimeEdit_virtualbase_validate(const VirtualQTimeEdit* self, struct miqt_string input, int* pos);
void QTimeEdit_virtualbase_fixup(const VirtualQTimeEdit* self, struct miqt_string input);
QDateTime* QTimeEdit_virtualbase_dateTimeFromText(const VirtualQTimeEdit* self, struct miqt_string text);
struct miqt_string QTimeEdit_virtualbase_textFromDateTime(const VirtualQTimeEdit* self, QDateTime* dt);
int QTimeEdit_virtualbase_stepEnabled(const VirtualQTimeEdit* self);
void QTimeEdit_virtualbase_mousePressEvent(VirtualQTimeEdit* self, QMouseEvent* event);
void QTimeEdit_virtualbase_paintEvent(VirtualQTimeEdit* self, QPaintEvent* event);
void QTimeEdit_virtualbase_initStyleOption(const VirtualQTimeEdit* self, QStyleOptionSpinBox* option);
QSize* QTimeEdit_virtualbase_minimumSizeHint(const VirtualQTimeEdit* self);
QVariant* QTimeEdit_virtualbase_inputMethodQuery(const VirtualQTimeEdit* self, int param1);
void QTimeEdit_virtualbase_resizeEvent(VirtualQTimeEdit* self, QResizeEvent* event);
void QTimeEdit_virtualbase_keyReleaseEvent(VirtualQTimeEdit* self, QKeyEvent* event);
void QTimeEdit_virtualbase_focusOutEvent(VirtualQTimeEdit* self, QFocusEvent* event);
void QTimeEdit_virtualbase_contextMenuEvent(VirtualQTimeEdit* self, QContextMenuEvent* event);
void QTimeEdit_virtualbase_changeEvent(VirtualQTimeEdit* self, QEvent* event);
void QTimeEdit_virtualbase_closeEvent(VirtualQTimeEdit* self, QCloseEvent* event);
void QTimeEdit_virtualbase_hideEvent(VirtualQTimeEdit* self, QHideEvent* event);
void QTimeEdit_virtualbase_mouseReleaseEvent(VirtualQTimeEdit* self, QMouseEvent* event);
void QTimeEdit_virtualbase_mouseMoveEvent(VirtualQTimeEdit* self, QMouseEvent* event);
void QTimeEdit_virtualbase_timerEvent(VirtualQTimeEdit* self, QTimerEvent* event);
void QTimeEdit_virtualbase_showEvent(VirtualQTimeEdit* self, QShowEvent* event);
int QTimeEdit_virtualbase_devType(const VirtualQTimeEdit* self);
void QTimeEdit_virtualbase_setVisible(VirtualQTimeEdit* self, bool visible);
int QTimeEdit_virtualbase_heightForWidth(const VirtualQTimeEdit* self, int param1);
bool QTimeEdit_virtualbase_hasHeightForWidth(const VirtualQTimeEdit* self);
QPaintEngine* QTimeEdit_virtualbase_paintEngine(const VirtualQTimeEdit* self);
void QTimeEdit_virtualbase_mouseDoubleClickEvent(VirtualQTimeEdit* self, QMouseEvent* event);
void QTimeEdit_virtualbase_enterEvent(VirtualQTimeEdit* self, QEnterEvent* event);
void QTimeEdit_virtualbase_leaveEvent(VirtualQTimeEdit* self, QEvent* event);
void QTimeEdit_virtualbase_moveEvent(VirtualQTimeEdit* self, QMoveEvent* event);
void QTimeEdit_virtualbase_tabletEvent(VirtualQTimeEdit* self, QTabletEvent* event);
void QTimeEdit_virtualbase_actionEvent(VirtualQTimeEdit* self, QActionEvent* event);
void QTimeEdit_virtualbase_dragEnterEvent(VirtualQTimeEdit* self, QDragEnterEvent* event);
void QTimeEdit_virtualbase_dragMoveEvent(VirtualQTimeEdit* self, QDragMoveEvent* event);
void QTimeEdit_virtualbase_dragLeaveEvent(VirtualQTimeEdit* self, QDragLeaveEvent* event);
void QTimeEdit_virtualbase_dropEvent(VirtualQTimeEdit* self, QDropEvent* event);
bool QTimeEdit_virtualbase_nativeEvent(VirtualQTimeEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
int QTimeEdit_virtualbase_metric(const VirtualQTimeEdit* self, int param1);
void QTimeEdit_virtualbase_initPainter(const VirtualQTimeEdit* self, QPainter* painter);
QPaintDevice* QTimeEdit_virtualbase_redirected(const VirtualQTimeEdit* self, QPoint* offset);
QPainter* QTimeEdit_virtualbase_sharedPainter(const VirtualQTimeEdit* self);
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));